Update the home page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -61,7 +61,7 @@
                             In-person
                         </button>
                         <button class="w-btn1 w-btn-blue nextBtn" type="button">
-                            Virtual
+                            Online
                         </button>
                     </div>
 
