Update the result page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,6 +6,7 @@
         <title>FindMyTutor</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/nav.css">
         <link rel="stylesheet" href="css/home.css">
         <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     </head>
@@ -63,6 +64,7 @@
                         <button class="w-btn1 w-btn-blue nextBtn" type="button">
                             Online
                         </button>
+                        <input id="method" type="hidden" name="method" value="">
                     </div>
 
                     <div class="page">
@@ -75,6 +77,7 @@
                         <button class="w-btn2 w-btn-blue nextBtn" type="button">
                             English
                         </button>
+                        <input id="subject" type="hidden" name="subject" value="">
                     </div>
 
                     <div class="page">
@@ -87,6 +90,7 @@
                         <button class="w-btn2 w-btn-blue submitBtn" type="button">
                             $60 - $70
                         </button>
+                        <input id="price" type="hidden" name="price" value="">
                     </div>
                 </form>
             </div>
