Update static files

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,7 +27,7 @@
                         <a href="">Sign in</a>
                     </li>
                     <li>
-                        <a href="">Sign up</a>
+                        <a href="">Account</a>
                     </li>
                 </ul>
             </nav>
