--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -24,11 +24,11 @@
                     <a href="">Sign in</a>
                 </li>
                 <li>
-                    <a href="">Sign up</a>
+                    <a href="">Account</a>
                 </li>
             </ul>
         </nav>
     </header>
-    
+
 </body>
 </html>
