--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -94,6 +94,26 @@
                     </div>
                 </form>
             </div>
+            <div class="popup-overlay"></div>
+            <div class="popup">
+                <div class="popup-close">&times;</div>
+                <div class="form">
+                    <h1>Sign in</h1>
+                    <div class="element">
+                        <label for="email">Email</label>
+                        <input type="text" id="email">
+                    </div>
+                    <div class="element">
+                        <label for="password">Password</label>
+                        <input type="password" id="password">
+                    </div>
+                    <div class="forgot-pass"><a href="#">Forgot Password?</a></div>
+                    <div class="element">
+                        <button>Sign-in</button>
+                    </div>
+                    <div class="signup-link"><a href="#">Not a member? Signup now</a></div>
+                </div>
+            </div>
         </div>
 
         <script>
