Update the result page

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Result</title>
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/result.css">
 </head>
 <body>
     <header>
@@ -29,6 +30,88 @@
             </ul>
         </nav>
     </header>
+    <div class="body-container">
+        <div class="edit-container">
+            <button class="edit" id="edit" type="button">Edit</button>
+            <button class="edit" type="button"># Online</button>
+            <button class="edit" type="button"># Programming</button>
+            <button class="edit" type="button"># $60 - $70</button>
+        </div>
+        <div class="tutor-container">
+            <div class="tutor-img">
+                <img src="img/profile.jpg" />
+            </div>
+            <div class="tutor-inner-container">
+                <div class="tutor-info">
+                    <span>Name: </span>
+                    <span>From: </span>
+                    <span>Subjects: </span>
+                    <span>Price: </span>
+                    <span>Ratings: </span>
+                </div>
+                <div class="tutor-intro">
+                    <span>I will teach you programming!</span>
+                </div>
+            </div>
+        </div>
+        <div class="tutor-container">
+            <div class="tutor-img">
+                <img src="img/profile.jpg" />
+            </div>
+            <div class="tutor-inner-container">
+                <div class="tutor-info">
+                    <span>Name: </span>
+                    <span>From: </span>
+                    <span>Subjects: </span>
+                    <span>Price: </span>
+                    <span>Ratings: </span>
+                </div>
+                <div class="tutor-intro">
+                    <span>I will teach you programming!</span>
+                </div>
+            </div>
+        </div>
+        <div class="tutor-container">
+            <div class="tutor-img">
+                <img src="img/profile.jpg" />
+            </div>
+            <div class="tutor-inner-container">
+                <div class="tutor-info">
+                    <span>Name: </span>
+                    <span>From: </span>
+                    <span>Subjects: </span>
+                    <span>Price: </span>
+                    <span>Ratings: </span>
+                </div>
+                <div class="tutor-intro">
+                    <span>I will teach you programming!</span>
+                </div>
+            </div>
+        </div>
+        <div class="tutor-container">
 
+        </div>
+        <div class="tutor-container">
+
+        </div>
+        <div class="tutor-container">
+
+        </div>
+        <div class="pagination">
+            <ul class="ul">
+                <!-- <li class="btn prev"><span><i class="fas fa-angle-left"></i> Prev</span></li>
+                <li class="numb active"><span>1</span></li>
+                <li class="numb"><span>2</span></li>
+                <li class="dots"><span>...</span></li>
+                <li class="numb"><span>4</span></li>
+                <li class="numb"><span>5</span></li>
+                <li class="dots"><span>...</span></li>
+                <li class="numb"><span>7</span></li>
+                <li class="btn next"><span>Next <i class="fas fa-angle-right"></i></span></li> -->
+            </ul>
+        </div>
+    </div>
+
+    <script src="js/result.js"></script>
 </body>
 </html>
