--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -81,13 +81,13 @@
                     </div>
 
                     <div class="page">
-                        <button class="w-btn2 w-btn-blue submitBtn" type="button">
+                        <button class="w-btn2 w-btn-blue submitBtn" onclick="openLoginForm()" type="button">
                             $40 - $50
                         </button>
-                        <button class="w-btn2 w-btn-blue submitBtn" type="button">
+                        <button class="w-btn2 w-btn-blue submitBtn" onclick="openLoginForm()" type="button">
                             $50 - $60
                         </button>
-                        <button class="w-btn2 w-btn-blue submitBtn" type="button">
+                        <button class="w-btn2 w-btn-blue submitBtn" onclick="openLoginForm()" type="button">
                             $60 - $70
                         </button>
                         <input id="price" type="hidden" name="price" value="">
@@ -96,7 +96,7 @@
             </div>
             <div class="popup-overlay"></div>
             <div class="popup">
-                <div class="popup-close">&times;</div>
+                <div class="popup-close" onclick="closeLoginForm()">&times;</div>
                 <div class="form">
                     <h1>Sign in</h1>
                     <div class="element">
