--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -10,6 +10,8 @@ body {
     background: #4169e1;
 }
 header {
+    position: sticky;
+    top: 0;
     width: 100%;
     height: 80px;
     background: #4169e1;
@@ -17,6 +19,8 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 0 100px;
+    z-index: 10;
+    border-bottom: #fefefe solid 0.05rem;
 }
 .logo {
     font-size: 28px;
