Remove login popup

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -81,38 +81,18 @@
                     </div>
 
                     <div class="page">
-                        <button class="w-btn2 w-btn-blue submitBtn" onclick="openLoginForm()" type="button">
+                        <button class="w-btn2 w-btn-blue submitBtn" type="button">
                             $40 - $50
                         </button>
-                        <button class="w-btn2 w-btn-blue submitBtn" onclick="openLoginForm()" type="button">
+                        <button class="w-btn2 w-btn-blue submitBtn" type="button">
                             $50 - $60
                         </button>
-                        <button class="w-btn2 w-btn-blue submitBtn" onclick="openLoginForm()" type="button">
+                        <button class="w-btn2 w-btn-blue submitBtn" type="button">
                             $60 - $70
                         </button>
                         <input id="price" type="hidden" name="price" value="">
                     </div>
                 </form>
-            </div>
-            <div class="popup-overlay"></div>
-            <div class="popup">
-                <div class="popup-close" onclick="closeLoginForm()">&times;</div>
-                <div class="form">
-                    <h1>Sign in</h1>
-                    <div class="element">
-                        <label for="email">Email</label>
-                        <input type="text" id="email">
-                    </div>
-                    <div class="element">
-                        <label for="password">Password</label>
-                        <input type="password" id="password">
-                    </div>
-                    <div class="forgot-pass"><a href="#">Forgot Password?</a></div>
-                    <div class="element">
-                        <button>Sign-in</button>
-                    </div>
-                    <div class="signup-link"><a href="#">Not a member? Signup now</a></div>
-                </div>
             </div>
         </div>
 
