Update the result page

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -52,8 +52,8 @@
                 <div class="tutor-intro">
                     <span>I will teach you programming!</span>
                 </div>
-                <div class="tutor-send-request" onclick="openLoginForm()">
-                    <button>Send a request</button>
+                <div class="tutor-send-request">
+                    <button onclick="openLoginForm()">Send a request</button>
                 </div>
             </div>
         </div>
@@ -72,8 +72,8 @@
                 <div class="tutor-intro">
                     <span>I will teach you programming!</span>
                 </div>
-                <div class="tutor-send-request" onclick="openRequestForm()">
-                    <button>Send a request</button>
+                <div class="tutor-send-request">
+                    <button onclick="openRequestForm()">Send a request</button>
                 </div>
             </div>
         </div>
@@ -92,8 +92,8 @@
                 <div class="tutor-intro">
                     <span>I will teach you programming!</span>
                 </div>
-                <div class="tutor-send-request" onclick="openLoginForm()">
-                    <button>Send a request</button>
+                <div class="tutor-send-request">
+                    <button onclick="openLoginForm()">Send a request</button>
                 </div>
             </div>
         </div>
