--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -93,7 +93,7 @@
                     <span>I will teach you programming!</span>
                 </div>
                 <div class="tutor-send-request">
-                    <button onclick="openLoginForm()">Send a request</button>
+                    <button onclick="openRegistrationForm()">Send a request</button>
                 </div>
             </div>
         </div>
@@ -122,23 +122,59 @@
         <div class="popup-overlay" id="popup-overlay-login"></div>
         <div class="popup-login">
             <div class="popup-close" id="login-close" onclick="closeLoginForm()">&times;</div>
-            <div class="form">
+            <form action="POST" class="form">
                 <h1>Sign in</h1>
                 <div class="element">
                     <label for="email">Email</label>
-                    <input type="text" id="email">
+                    <input type="text" id="email" name="email">
                 </div>
                 <div class="element">
                     <label for="password">Password</label>
-                    <input type="password" id="password">
+                    <input type="password" id="password" name="password">
                 </div>
                 <div class="forgot-pass"><a href="#">Forgot Password?</a></div>
                 <div class="element">
                     <button>Sign-in</button>
                 </div>
-                <div class="signup-link"><a href="#">Not a member? Signup now</a></div>
-            </div>
+                <div class="signup-link"><a id="signup-link" onclick="signUpLinkFunction()">Not a member? Sign-up now</a></div>
+            </form>
         </div>
+
+        <div class="popup-overlay" id="popup-overlay-registration"></div>
+        <div class="popup-registration">
+            <div class="popup-close" id="registration-close" onclick="closeRegistrationForm()">&times;</div>
+            <form action="POST" class="form">
+                <h1>Sign up</h1>
+                <div class="element-name">
+                    <div class="fname">
+                        <label for="text">First Name</label>
+                        <input type="text" id="firstName" name="firstName">
+                    </div>
+                    <div class="name-center"></div>
+                    <div class="lname">
+                        <label for="text">Last Name</label>
+                        <input type="text" id="lastName" name="lastName">
+                    </div>
+                </div>
+                <div class="element">
+                    <label for="email">Email</label>
+                    <input type="text" id="email" name="email">
+                </div>
+                <div class="element">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password">
+                </div>
+                <div class="element">
+                    <label for="password">Repeat Password</label>
+                    <input type="password" id="password">
+                </div>
+                <div class="element">
+                    <button>Sign-up</button>
+                </div>
+                <div class="signin-link"><a id="signin-link" onclick="signInLinkFunction()">Already a member? Sign-in now</a></div>
+            </form>
+        </div>
+
         <div class="popup-overlay" id="popup-overlay-request"></div>
         <div class="popup-request">
             <div class="popup-close" id="request-close" onclick="closeRequestForm()">&times;</div>
