--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -122,7 +122,7 @@
         <div class="popup-overlay" id="popup-overlay-login"></div>
         <div class="popup-login">
             <div class="popup-close" id="login-close" onclick="closeLoginForm()">&times;</div>
-            <form action="POST" class="form">
+            <form action="/signin" class="form" method="post">
                 <h1>Sign in</h1>
                 <div class="element">
                     <label for="email">Email</label>
@@ -143,7 +143,7 @@
         <div class="popup-overlay" id="popup-overlay-registration"></div>
         <div class="popup-registration">
             <div class="popup-close" id="registration-close" onclick="closeRegistrationForm()">&times;</div>
-            <form action="POST" class="form">
+            <form action="/signup" class="form" method="post">
                 <h1>Sign up</h1>
                 <div class="element-name">
                     <div class="fname">
