--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -134,7 +134,7 @@
                 </div>
                 <div class="forgot-pass"><a href="#">Forgot Password?</a></div>
                 <div class="element">
-                    <button>Sign-in</button>
+                    <button type="button" id="btn-signin">Sign-in</button>
                 </div>
                 <div class="signup-link"><a id="signup-link" onclick="signUpLinkFunction()">Not a member? Sign-up now</a></div>
             </form>
