--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -7,6 +7,7 @@
     <title>Search Result</title>
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/result.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 </head>
 <body>
     <header>
@@ -122,7 +123,7 @@
         <div class="popup-overlay" id="popup-overlay-login"></div>
         <div class="popup-login">
             <div class="popup-close" id="login-close" onclick="closeLoginForm()">&times;</div>
-            <form action="/signin" class="form" method="post">
+            <form action="/api/auth/signin" class="form" method="post">
                 <h1>Sign in</h1>
                 <div class="element">
                     <label for="email">Email</label>
@@ -134,7 +135,7 @@
                 </div>
                 <div class="forgot-pass"><a href="#">Forgot Password?</a></div>
                 <div class="element">
-                    <button type="button" id="btn-signin">Sign-in</button>
+                    <button type="submit" id="btn-signin">Sign-in</button>
                 </div>
                 <div class="signup-link"><a id="signup-link" onclick="signUpLinkFunction()">Not a member? Sign-up now</a></div>
             </form>
@@ -143,33 +144,33 @@
         <div class="popup-overlay" id="popup-overlay-registration"></div>
         <div class="popup-registration">
             <div class="popup-close" id="registration-close" onclick="closeRegistrationForm()">&times;</div>
-            <form action="/signup" class="form" method="post">
+            <form action="/api/auth/signup" class="form" method="post">
                 <h1>Sign up</h1>
                 <div class="element-name">
                     <div class="fname">
                         <label for="text">First Name</label>
-                        <input type="text" id="firstName" name="firstName">
+                        <input type="text" id="signup-firstName" name="firstName">
                     </div>
                     <div class="name-center"></div>
                     <div class="lname">
                         <label for="text">Last Name</label>
-                        <input type="text" id="lastName" name="lastName">
+                        <input type="text" id="signup-lastName" name="lastName">
                     </div>
                 </div>
                 <div class="element">
                     <label for="email">Email</label>
-                    <input type="text" id="email" name="email">
+                    <input type="text" id="signup-email" name="email">
                 </div>
                 <div class="element">
                     <label for="password">Password</label>
-                    <input type="password" id="password" name="password">
+                    <input type="password" id="signup-password" name="password">
                 </div>
                 <div class="element">
                     <label for="password">Repeat Password</label>
                     <input type="password" id="password">
                 </div>
                 <div class="element">
-                    <button>Sign-up</button>
+                    <button type="submit" id="btn-signup">Sign-up</button>
                 </div>
                 <div class="signin-link"><a id="signin-link" onclick="signInLinkFunction()">Already a member? Sign-in now</a></div>
             </form>
@@ -191,5 +192,6 @@
     </div>
 
     <script src="js/result.js"></script>
+    <script src="js/signinAndSignup.js"></script>
 </body>
 </html>
